TAG: littriageload-6-0-11-18
DATE: 11/27/2017
STAFF: lec
CHANGES:
TR12732/littriage_update_pdf was not copying file to needs_review folder

TAG: littriageload-6-0-11-17
DATE: 11/20/2017
STAFF: lec
CHANGES:
only run /delete/update if there is something in the SQL files

TAG: littriageload-6-0-11-16
DATE: 11/14/2017
STAFF: lec
CHANGES:
littriageload.sh : 
split up what is send to LOG_FILE and what is sent to LOG_DIAG

TAG: littriageload-6-0-11-15
TAG: littriageload-6-0-11-14
DATE: 11/10/2017
STAFF: lec
CHANGES:
TR12712
1) Abstract : remove pipes in text
2) change supplemental/pdf from "update" to "delete/bcp"
3) check bib_refs/bib_workflow_data counts

TAG: littriageload-6-0-11-13
TAG: littriageload-6-0-11-12
TAG: littriageload-6-0-11-11
TAG: littriageload-6-0-11-10
TAG: littriageload-6-0-11-9
TAG: littriageload-6-0-11-8
TAG: littriageload-6-0-11-7
TAG: littriageload-6-0-11-6
TAG: littriageload-6-0-11-5
TAG: littriageload-6-0-11-4
TAG: littriageload-6-0-11-3
TAG: littriageload-6-0-11-2
TAG: littriageload-6-0-11-1
DATE: 10/04/2017, 10/09/2017, 10/16/2017, 10/17/2017
STAFF: lec
CHANGES:
TR12250/Lit Triage project