@@ -1,3 +1,9 @@
+TAG: littriageload-6-0-11-19
+DATE: 11/30/2017
+STAFF: lec
+CHANGES:
+added archiving of 'input' directory
+
 TAG: littriageload-6-0-11-18
 DATE: 11/27/2017
 STAFF: lec
